force-app/main/default/objects/Funding_Allocation__c/Funding_Allocation__c.object-meta.xml
<CustomObject>
    <label>Funding to Strategic Area</label>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>Allocation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Allocations to Strategic Area</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>