force-app/main/default/objects/Funding_Allocation__c/fields/Allocated_Draft__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Draft__c</fullName>
    <label>Allocated (Draft)</label>
    <summarizedField>Investment_Area_Allocation__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Investment_Area_Allocation__c.Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </summaryFilterItems>
    <summaryForeignKey>Investment_Area_Allocation__c.Funding_Allocation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>