force-app/main/default/objects/Funding_Allocation__c/fields/Allocated_to_Investment_Areas__c.field-meta.xml
<CustomField>
    <fullName>Allocated_to_Investment_Areas__c</fullName>
    <inlineHelpText>Funding allocated from this Funding Allocation allocated to Investment Areas</inlineHelpText>
    <label>Allocated to Investment Areas</label>
    <summarizedField>Investment_Area_Allocation__c.Amount__c</summarizedField>
    <summaryForeignKey>Investment_Area_Allocation__c.Funding_Allocation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>