force-app/main/default/objects/Funding_Allocation__c/fields/Available_to_Allocate__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Allocate__c</fullName>
    <formula>Funding_Amount__c -  Allocated_to_Investment_Areas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Funding in this Funding Allocation available to be allocated to Investment Areas</inlineHelpText>
    <label>Available to Allocate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>