force-app/main/default/objects/Funding_Allocation__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <label>Financial Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2029/30</fullName>
            </value>
            <value>
                <fullName>2028/29</fullName>
            </value>
            <value>
                <fullName>2027/28</fullName>
            </value>
            <value>
                <fullName>2026/27</fullName>
            </value>
            <value>
                <fullName>2025/26</fullName>
            </value>
            <value>
                <fullName>2024/25</fullName>
            </value>
            <value>
                <fullName>2023/24</fullName>
            </value>
            <value>
                <fullName>2022/23</fullName>
            </value>
            <value>
                <fullName>2021/22</fullName>
            </value>
            <value>
                <fullName>2020/21</fullName>
            </value>
            <value>
                <fullName>2019/20</fullName>
            </value>
            <value>
                <fullName>2018/19</fullName>
            </value>
            <value>
                <fullName>2017/18</fullName>
            </value>
            <value>
                <fullName>2016/17</fullName>
            </value>
            <value>
                <fullName>2015/16</fullName>
            </value>
            <value>
                <fullName>2014/15</fullName>
            </value>
            <value>
                <fullName>2014 and prior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>