force-app/main/default/objects/Funding_Allocation__c/fields/Funding_Allocation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Funding_Allocation_Start_Date__c</fullName>
    <label>Funding Allocation Start Date</label>
    <type>Date</type>
</CustomField>