force-app/main/default/objects/Funding_Allocation__c/fields/Strategic_Area__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Area__c</fullName>
    <label>Strategic Area</label>
    <referenceTo>Strategic_Area__c</referenceTo>
    <relationshipName>Funding_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>