force-app/main/default/objects/Funding_Allocation__c/validationRules/Funding_Amount_Greater_Than_Remaining.validationRule-meta.xml
<ValidationRule>
    <fullName>Funding_Amount_Greater_Than_Remaining</fullName>
    <active>true</active>
    <errorConditionFormula>CreatedDate &gt; NOW()</errorConditionFormula>
    <errorDisplayField>Funding_Amount__c</errorDisplayField>
    <errorMessage>This Funding Amount is more than what is available (remaining) for allocation.</errorMessage>
</ValidationRule>