force-app/main/default/objects/Funding_Allocation__c/validationRules/Strategic_area_closed_funding_allocation.validationRule-meta.xml
<ValidationRule>
    <fullName>Strategic_area_closed_funding_allocation</fullName>
    <active>true</active>
    <description>Validation on funding allocation to restrict creation of funding allocation when strategic area status is closed.</description>
    <errorConditionFormula>IF(ISPICKVAL(Strategic_Area__r.Status__c,&quot;Closed&quot;)&amp;&amp; ISNEW(), true, false)</errorConditionFormula>
    <errorMessage>A funding allocation cannot be made in a closed strategic area.</errorMessage>
</ValidationRule>