force-app/main/default/objects/Funding_Allocation__c/listViews/All_Funding_Allocations.listView-meta.xml
<ListView>
    <fullName>All_Funding_Allocations</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Funding_Amount__c</columns>
    <columns>Allocated_Active__c</columns>
    <columns>Allocated_Draft__c</columns>
    <columns>Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Funding Allocations</label>
</ListView>