force-app/main/default/objects/Funding_Allocation__c/listViews/Funding_Allocations_Pending_Approval.listView-meta.xml
<ListView>
    <fullName>Funding_Allocations_Pending_Approval</fullName>
    <columns>NAME</columns>
    <columns>Funding_Amount__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>Funding Allocations Pending Approval</label>
</ListView>